compiler/tests/template/success/random_length_inference.jazz
export fn main () -> reg u8 {
  stack u8[1] s;
  reg u64 len = 1;
  s = #randombytes(s, len); // the length arg is inferred
  reg u8 res = s[0];
  return res;
}
