compiler/tests/template/fail/stack_unknown_size.jazz
export fn main<:n> () -> reg u64 {
  stack u64[n] s; // stack variable of unknown size -> failure
  s[0] = 0;
  reg u64 res = s[0];
  return res;
}
